cmake_minimum_required(VERSION 3.12)

project(PrintRawObservations)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(PrintRawObservationsAdvanced src/PrintRawObservationsAdvanced.cpp)
set_target_properties(PrintRawObservationsAdvanced PROPERTIES OUTPUT_NAME print-raw-observations-advanced)
target_link_libraries(PrintRawObservationsAdvanced GnssHat)

add_executable(PrintRawObservationsBasic src/PrintRawObservationsBasic.cpp)
set_target_properties(PrintRawObservationsBasic PROPERTIES OUTPUT_NAME print-raw-observations-basic)
target_link_libraries(PrintRawObservationsBasic GnssHat)
